updating doco to new format

--- a/packages/storybook-html/stories/components/core/colour-apply.story.mdx
+++ b/packages/storybook-html/stories/components/core/colour-apply.story.mdx
@@ -2,7 +2,290 @@ import { Meta, Story, Preview } from "@storybook/addon-docs";
 
 <Meta title="Core/Colour/Applying colour" />
 
-## Brand colours
+# Applying colour
+
+For consistency, we use the below defined colour palette throughout our interface. Keep in mind that green, red and yellow are only used in special cases like alerts and messaging.
+
+<table className="uqds-table uqds-table--card uqds-table--colour">
+  <tbody className="uqds-table__body">
+    <tr className="uqds-table__mobile-heading">
+      <th className="uqds-table__heading">Example</th>
+      <th className="uqds-table__heading">Variable</th>
+      <th className="uqds-table__heading">HEX</th>
+      <th className="uqds-table__heading">Usage</th>
+    </tr>
+    <tr className="uqds-table__row">
+      <td className="uqds-table__item">
+        <div className="uqds-colour__palette uqds-colour--purple-500"></div>
+      </td>
+      <td className="uqds-table__item" data-title="Variable:">
+        <code>$purple-500</code> 
+      </td>
+      <td className="uqds-table__item" data-title="HEX:">
+        #3b383e
+      </td>
+      <td className="uqds-table__item" data-title="Usage:">
+        Primary colour. Used for primary button and link text
+      </td>
+    </tr>
+    <tr className="uqds-table__row">
+      <td className="uqds-table__item">
+        <div className="uqds-colour__palette uqds-colour--purple-600"></div>
+      </td>
+      <td className="uqds-table__item" data-title="Variable:">
+        <code>$purple-600</code> 
+      </td>
+      <td className="uqds-table__item" data-title="HEX:">
+        #3b383e
+      </td>
+      <td className="uqds-table__item" data-title="Usage:">
+        Primary colour. Used for primary button and link text
+      </td>
+    </tr>
+    <tr className="uqds-table__row">
+      <td className="uqds-table__item">
+        <div className="uqds-colour__palette uqds-colour--purple-650"></div>
+      </td>
+      <td className="uqds-table__item" data-title="Variable:">
+        <code>$purple-650</code> 
+      </td>
+      <td className="uqds-table__item" data-title="HEX:">
+        #3b383e
+      </td>
+      <td className="uqds-table__item" data-title="Usage:">
+        Primary colour. Used for primary button and link text
+      </td>
+    </tr>
+    <tr className="uqds-table__row">
+      <td className="uqds-table__item">
+        <div className="uqds-colour__palette uqds-purple-gradient"></div>
+      </td>
+      <td className="uqds-table__item" data-title="Variable:">
+        <code>$purple-gradient</code> 
+      </td>
+      <td className="uqds-table__item" data-title="HEX:">
+        #3b383e
+      </td>
+      <td className="uqds-table__item" data-title="Usage:">
+        Primary colour. Used for primary button and link text
+      </td>
+    </tr>
+    <tr className="uqds-table__row">
+      <td className="uqds-table__item">
+        <div className="uqds-colour__palette uqds-colour--black"></div>
+      </td>
+      <td className="uqds-table__item" data-title="Variable:">
+        <code>$black</code> 
+      </td>
+      <td className="uqds-table__item" data-title="HEX:">
+        #3b383e
+      </td>
+      <td className="uqds-table__item" data-title="Usage:">
+        Primary colour. Used for primary button and link text
+      </td>
+    </tr>
+    <tr className="uqds-table__row">
+      <td className="uqds-table__item">
+        <div className="uqds-colour__palette uqds-colour--grey-900"></div>
+      </td>
+      <td className="uqds-table__item" data-title="Variable:">
+        <code>$grey-900</code> 
+      </td>
+      <td className="uqds-table__item" data-title="HEX:">
+        #3b383e
+      </td>
+      <td className="uqds-table__item" data-title="Usage:">
+        Primary colour. Used for primary button and link text
+      </td>
+    </tr>
+    <tr className="uqds-table__row">
+      <td className="uqds-table__item">
+        <div className="uqds-colour__palette uqds-colour--grey-700"></div>
+      </td>
+      <td className="uqds-table__item" data-title="Variable:">
+        <code>$grey-700</code> 
+      </td>
+      <td className="uqds-table__item" data-title="HEX:">
+        #3b383e
+      </td>
+      <td className="uqds-table__item" data-title="Usage:">
+        Primary colour. Used for primary button and link text
+      </td>
+    </tr>
+    <tr className="uqds-table__row">
+      <td className="uqds-table__item">
+        <div className="uqds-colour__palette uqds-colour--grey-300"></div>
+      </td>
+      <td className="uqds-table__item" data-title="Variable:">
+        <code>$grey-300</code> 
+      </td>
+      <td className="uqds-table__item" data-title="HEX:">
+        #3b383e
+      </td>
+      <td className="uqds-table__item" data-title="Usage:">
+        Primary colour. Used for primary button and link text
+      </td>
+    </tr>
+    <tr className="uqds-table__row">
+      <td className="uqds-table__item">
+        <div className="uqds-colour__palette uqds-colour--grey-200"></div>
+      </td>
+      <td className="uqds-table__item" data-title="Variable:">
+        <code>$grey-200</code> 
+      </td>
+      <td className="uqds-table__item" data-title="HEX:">
+        #3b383e
+      </td>
+      <td className="uqds-table__item" data-title="Usage:">
+        Primary colour. Used for primary button and link text
+      </td>
+    </tr>
+    <tr className="uqds-table__row">
+      <td className="uqds-table__item">
+        <div className="uqds-colour__palette uqds-colour--grey-50"></div>
+      </td>
+      <td className="uqds-table__item" data-title="Variable:">
+        <code>$grey-50</code> 
+      </td>
+      <td className="uqds-table__item" data-title="HEX:">
+        #3b383e
+      </td>
+      <td className="uqds-table__item" data-title="Usage:">
+        Primary colour. Used for primary button and link text
+      </td>
+    </tr>
+    <tr className="uqds-table__row">
+      <td className="uqds-table__item">
+        <div className="uqds-colour__palette uqds-colour--white"></div>
+      </td>
+      <td className="uqds-table__item" data-title="Variable:">
+        <code>$white</code> 
+      </td>
+      <td className="uqds-table__item" data-title="HEX:">
+        #3b383e
+      </td>
+      <td className="uqds-table__item" data-title="Usage:">
+        Primary colour. Used for primary button and link text
+      </td>
+    </tr>
+    <tr className="uqds-table__row">
+      <td className="uqds-table__item">
+        <div className="uqds-colour__palette uqds-colour--utility-500"></div>
+      </td>
+      <td className="uqds-table__item" data-title="Variable:">
+        <code>$utility-500</code> 
+      </td>
+      <td className="uqds-table__item" data-title="HEX:">
+        #3b383e
+      </td>
+      <td className="uqds-table__item" data-title="Usage:">
+        Primary colour. Used for primary button and link text
+      </td>
+    </tr>
+    <tr className="uqds-table__row">
+      <td className="uqds-table__item">
+        <div className="uqds-colour__palette uqds-colour--utility-50"></div>
+      </td>
+      <td className="uqds-table__item" data-title="Variable:">
+        <code>$utility-50</code> 
+      </td>
+      <td className="uqds-table__item" data-title="HEX:">
+        #3b383e
+      </td>
+      <td className="uqds-table__item" data-title="Usage:">
+        Primary colour. Used for primary button and link text
+      </td>
+    </tr>
+        <tr className="uqds-table__row">
+      <td className="uqds-table__item">
+        <div className="uqds-colour__palette uqds-colour--error-500"></div>
+      </td>
+      <td className="uqds-table__item" data-title="Variable:">
+        <code>$error-500</code> 
+      </td>
+      <td className="uqds-table__item" data-title="HEX:">
+        #3b383e
+      </td>
+      <td className="uqds-table__item" data-title="Usage:">
+        Primary colour. Used for primary button and link text
+      </td>
+    </tr>
+    <tr className="uqds-table__row">
+      <td className="uqds-table__item">
+        <div className="uqds-colour__palette uqds-colour--error-50"></div>
+      </td>
+      <td className="uqds-table__item" data-title="Variable:">
+        <code>$error-50</code> 
+      </td>
+      <td className="uqds-table__item" data-title="HEX:">
+        #3b383e
+      </td>
+      <td className="uqds-table__item" data-title="Usage:">
+        Primary colour. Used for primary button and link text
+      </td>
+    </tr>
+        <tr className="uqds-table__row">
+      <td className="uqds-table__item">
+        <div className="uqds-colour__palette uqds-colour--warning-500"></div>
+      </td>
+      <td className="uqds-table__item" data-title="Variable:">
+        <code>$warning-500</code> 
+      </td>
+      <td className="uqds-table__item" data-title="HEX:">
+        #3b383e
+      </td>
+      <td className="uqds-table__item" data-title="Usage:">
+        Primary colour. Used for primary button and link text
+      </td>
+    </tr>
+    <tr className="uqds-table__row">
+      <td className="uqds-table__item">
+        <div className="uqds-colour__palette uqds-colour--warning-50"></div>
+      </td>
+      <td className="uqds-table__item" data-title="Variable:">
+        <code>$warning-50</code> 
+      </td>
+      <td className="uqds-table__item" data-title="HEX:">
+        #3b383e
+      </td>
+      <td className="uqds-table__item" data-title="Usage:">
+        Primary colour. Used for primary button and link text
+      </td>
+    </tr>
+        <tr className="uqds-table__row">
+      <td className="uqds-table__item">
+        <div className="uqds-colour__palette uqds-colour--success-500"></div>
+      </td>
+      <td className="uqds-table__item" data-title="Variable:">
+        <code>$success-500</code> 
+      </td>
+      <td className="uqds-table__item" data-title="HEX:">
+        #3b383e
+      </td>
+      <td className="uqds-table__item" data-title="Usage:">
+        Primary colour. Used for primary button and link text
+      </td>
+    </tr>
+    <tr className="uqds-table__row">
+      <td className="uqds-table__item">
+        <div className="uqds-colour__palette uqds-colour--success-50"></div>
+      </td>
+      <td className="uqds-table__item" data-title="Variable:">
+        <code>$success-50</code> 
+      </td>
+      <td className="uqds-table__item" data-title="HEX:">
+        #3b383e
+      </td>
+      <td className="uqds-table__item" data-title="Usage:">
+        Primary colour. Used for primary button and link text
+      </td>
+    </tr>
+  </tbody>
+</table>
+
+# Applying colour
+
+Our colours are created based off these scales below. If darker or lighter shaded are required they must be selected from this palette. Any introduction of colour outside those use cases above must be reviewed by the Design System team.
 
 ### Primary
 
@@ -115,7 +398,24 @@ The purple gradient is already incorporated in the header, footer and other comp
   <div className="uqds-colour__palette uqds-colour--utility-900">utility-900</div>
 </div>
 
-Icons should generally be the same colour as any adjacent text
+<p>&nbsp;</p>
+
+# Applying colour
+
+## Principles
+
+The Design System specifies colour based on the [UQ Brand Guidelines](https://marketing-communication.uq.edu.au/one-brand) in combination with accessibility standards and user interface standards.
+
+Colour should be applied to user interfaces in only two ways:
+
+- to apply the UQ brand to the user interface
+- in functional and semantic ways such as containers for related content or red for errors.
+
+Colour should not be added to an interface for the sole purpose of creating visual interest. Standard styles and components will incorporate appropriate colour. When a user interface needs to be more visually engaging to achieve its goals, incorporate photography aligned with the brand guidelines.
+
+## Usage examples
+
+### Typography
 
 <table className="uqds-table uqds-table--card uqds-table--colour">
   <tbody className="uqds-table__body">
@@ -128,17 +428,16 @@ Icons should generally be the same colour as any adjacent text
     </tr>
     <tr className="uqds-table__row">
       <td className="uqds-table__item">
-        <strong className="uqds-text-color--default">Default text</strong>{" "}
         <div className="uqds-colour__palette uqds-text-bgcolor"></div>
       </td>
       <td className="uqds-table__item" data-title="Name:">
-        Default text
+        Body text
       </td>
       <td className="uqds-table__item" data-title="Variable:">
-        <code>$text</code>
+        <code>$text</code> alias of <code>$grey-900</code> 
       </td>
       <td className="uqds-table__item" data-title="HEX:">
-        #2b2a29
+        #3b383e
       </td>
       <td className="uqds-table__item" data-title="Usage:">
         <ul>
@@ -147,24 +446,23 @@ Icons should generally be the same colour as any adjacent text
             reading
           </li>
           <li>
-            Created from a darkened Neutral <code>$uq-neutral-dark80</code>
+            References <code>$grey-900</code>
           </li>
         </ul>
       </td>
     </tr>
     <tr className="uqds-table__row">
       <td className="uqds-table__item">
-        <strong className="uqds-text-color--secondary">Secondary text</strong>{" "}
-        <div className="uqds-colour__palette uqds-neutral-dark40"></div>
+        <div className="uqds-colour__palette uqds-colour--grey-700"></div>
       </td>
       <td className="uqds-table__item" data-title="Name:">
-        Secondary text
+        Supertext
       </td>
       <td className="uqds-table__item" data-title="Variable:">
-        <code>$uq-neutral-dark40</code>
+        <code>$grey-700</code>
       </td>
       <td className="uqds-table__item" data-title="HEX:">
-        #817d7a
+        #757377
       </td>
       <td className="uqds-table__item" data-title="Usage:">
         <ul>
@@ -174,8 +472,7 @@ Icons should generally be the same colour as any adjacent text
             text
           </li>
           <li>
-            Used where emphasis and contrast is needed, e.g. titles, categories
-            and data
+            Used where emphasis and contrast is needed, e.g. breadcrumbs, supertext
           </li>
         </ul>
       </td>
@@ -203,43 +500,24 @@ Icons should generally be the same colour as any adjacent text
     </tr>
     <tr className="uqds-table__row">
       <td className="uqds-table__item">
-        <strong className="uqds-text-color--purple">Purple text</strong>{" "}
-        <div className="uqds-colour__palette uqds-colour--purple"></div>
+        <div className="uqds-colour__palette uqds-colour--purple-50"></div>
       </td>
       <td className="uqds-table__item" data-title="Name:">
-        Purple text
+        Text on purple bg
       </td>
       <td className="uqds-table__item" data-title="Variable:">
-        <code>$uq-purple</code>
+        <code>$purple-50</code>
       </td>
       <td className="uqds-table__item" data-title="HEX:">
-        #51247a
+        #eee9f2
       </td>
       <td className="uqds-table__item" data-title="Usage:">
         <ul>
-          <li>Used for content heading</li>
-          <li>
-            Used where emphasis and contrast is needed, e.g. titles, categories
-            and data
-          </li>
+          <li>Used for text on purple-500 background (eg header and footer)</li>
         </ul>
       </td>
     </tr>
-  </tbody>
-</table>
-
-## Links and buttons
-
-<table className="uqds-table uqds-table--card uqds-table--colour">
-  <tbody className="uqds-table__body">
-    <tr className="uqds-table__mobile-heading">
-      <th className="uqds-table__heading">Example</th>
-      <th className="uqds-table__heading">Name</th>
-      <th className="uqds-table__heading">Variable</th>
-      <th className="uqds-table__heading">HEX</th>
-      <th className="uqds-table__heading">Usage</th>
-    </tr>
-    <tr className="uqds-table__row">
+     <tr className="uqds-table__row">
       <td className="uqds-table__item">
         <div className="uqds-colour__palette uqds-link-color"></div>
       </td>
@@ -247,13 +525,15 @@ Icons should generally be the same colour as any adjacent text
         Link color
       </td>
       <td className="uqds-table__item" data-title="Variable:">
-        <code>$link</code>
+        <code>$link</code> alias of <code>$utility-500</code> 
       </td>
       <td className="uqds-table__item" data-title="HEX:">
-        #1e72c6
+        #0d6dcd
       </td>
       <td className="uqds-table__item" data-title="Usage:">
-        Default link and button colour
+        <ul>
+          <li>Default link and button colour</li>
+        </ul>
       </td>
     </tr>
     <tr className="uqds-table__row">
@@ -261,45 +541,29 @@ Icons should generally be the same colour as any adjacent text
         <div className="uqds-colour__palette uqds-link-active-color"></div>
       </td>
       <td className="uqds-table__item" data-title="Name:">
-        Link active color
+        Link active/hover color
       </td>
       <td className="uqds-table__item" data-title="Variable:">
-        <code>$link-active</code>
+        <code>$link-active</code> alias of <code>$utility-600</code> 
       </td>
       <td className="uqds-table__item" data-title="HEX:">
         #005ea5
       </td>
       <td className="uqds-table__item" data-title="Usage:">
-        Link and button active colour
-      </td>
-    </tr>
-    <tr className="uqds-table__row">
-      <td className="uqds-table__item">
-        <div className="uqds-colour__palette uqds-link-hover-color"></div>
-      </td>
-      <td className="uqds-table__item" data-title="Name:">
-        Link hover color
-      </td>
-      <td className="uqds-table__item" data-title="Variable:">
-        <code>$link-hover</code>
-      </td>
-      <td className="uqds-table__item" data-title="HEX:">
-        #005ea5
-      </td>
-      <td className="uqds-table__item" data-title="Usage:">
-        Link and button hover colour
+       <ul>
+          <li>Link and button colour hover or active colour</li>
+        </ul>
       </td>
     </tr>
   </tbody>
 </table>
 
-## Backgrounds
+
+### Backgrounds and borders
 
 Backgrounds are used to differentiate parts of an interface, and to create containers for related content.
 
 See for example: Sections, Cards, Table -- _add links eventually_
-
-### Light backgrounds
 
 These can be used with dark and purple text.
 
@@ -326,67 +590,74 @@ These can be used with dark and purple text.
         #ffffff
       </td>
       <td className="uqds-table__item" data-title="Usage:">
-        Default background for all usage
+        <ul>
+          <li>Default background for all usage</li>
+        </ul>
       </td>
     </tr>
     <tr className="uqds-table__row">
       <td className="uqds-table__item">
-        <div className="uqds-colour__palette uqds-neutral-light80"></div>
+        <div className="uqds-colour__palette uqds-colour--grey-50"></div>
       </td>
       <td className="uqds-table__item" data-title="Name:">
-        Light grey
+        Shaded bg colour
       </td>
       <td className="uqds-table__item" data-title="Variable:">
-        <code>$uq-neutral-light80</code>
+        <code>$grey-50</code>
       </td>
       <td className="uqds-table__item" data-title="HEX:">
-        #f7f6f5
+        #fbeaea
       </td>
       <td className="uqds-table__item" data-title="Usage:">
         <ul>
-          <li>Alternating sections of content</li>
-          <li>Creating secondary or supporting content containers</li>
+          <li>Used for shaded variant background eg sections, panes, tables</li>
+        </ul>
+      </td>
+    </tr>
+    <tr className="uqds-table__row">
+      <td className="uqds-table__item">
+        <div className="uqds-colour__palette uqds-colour--purple-600"></div>
+      </td>
+      <td className="uqds-table__item" data-title="Name:">
+        Dark purple
+      </td>
+      <td className="uqds-table__item" data-title="Variable:">
+        <code>$purple-600</code>
+      </td>
+      <td className="uqds-table__item" data-title="HEX:">
+        #4B2271
+      </td>
+      <td className="uqds-table__item" data-title="Usage:">
+        <ul>
+          <li>Header secondary background</li>
+          <li>Hero banner background</li>
+        </ul>
+      </td>
+    </tr>
+    <tr className="uqds-table__row">
+      <td className="uqds-table__item">
+        <div className="uqds-colour__palette uqds-colour--grey-300"></div>
+      </td>
+      <td className="uqds-table__item" data-title="Name:">
+        Grey border
+      </td>
+      <td className="uqds-table__item" data-title="Variable:">
+        <code>$grey-300</code>
+      </td>
+      <td className="uqds-table__item" data-title="HEX:">
+        #d1d0d2
+      </td>
+      <td className="uqds-table__item" data-title="Usage:">
+        <ul>
+          <li>Form field border</li>
+          <li>Controls border</li>
         </ul>
       </td>
     </tr>
   </tbody>
 </table>
 
-### Dark backgrounds
-
-These can be used with white text.
-
-<table className="uqds-table uqds-table--card uqds-table--colour">
-  <tbody className="uqds-table__body">
-    <tr className="uqds-table__mobile-heading">
-      <th className="uqds-table__heading">Example</th>
-      <th className="uqds-table__heading">Name</th>
-      <th className="uqds-table__heading">Variable</th>
-      <th className="uqds-table__heading">HEX</th>
-      <th className="uqds-table__heading">Usage</th>
-    </tr>
-    <tr className="uqds-table__row">
-      <td className="uqds-table__item">
-        <div className="uqds-colour__palette uqds-colour--purple"></div>
-      </td>
-      <td className="uqds-table__item" data-title="Name:">
-        UQ purple
-      </td>
-      <td className="uqds-table__item" data-title="Variable:">
-        <code>$uq-purple</code>
-      </td>
-      <td className="uqds-table__item" data-title="HEX:">
-        #51247a
-      </td>
-      <td className="uqds-table__item" data-title="Usage:">
-        <ul>
-          <li>Section background, when major breaks in topic occur</li>
-          <li>Banners when a image is not possible or available</li>
-        </ul>
-      </td>
-    </tr>
-  </tbody>
-</table>
+# BELOW NOT YET UPDATED #
 
 ## Alert and status colours
 
@@ -596,18 +867,8 @@ These can be used on a white background or as background colours to white text, 
 </table>
 
 
-# Applying colour
 
-## Principles
 
-The Design System specifies colour based on the [UQ Brand Guidelines](https://marketing-communication.uq.edu.au/one-brand) in combination with accessibility standards and user interface standards.
-
-Colour should be applied to user interfaces in only two ways:
-
-- to apply the UQ brand to the user interface
-- in functional and semantic ways such as containers for related content or red for errors.
-
-Colour should not be added to an interface for the sole purpose of creating visual interest. Standard styles and components will incorporate appropriate colour. When a user interface needs to be more visually engaging to achieve its goals, incorporate photography aligned with the brand guidelines.
 
 ## Accessibility
 
@@ -615,3 +876,4 @@ Use of colour must meet the following requirements:
 
 - [sufficient colour contrast](https://www.w3.org/WAI/WCAG21/Understanding/contrast-minimum) between text and background colours
 - [colour is not used as the only visual means of conveying information](https://www.w3.org/WAI/WCAG21/Understanding/use-of-color).
+
