--- a/packages/storybook-html/stories/components/core/colour-apply.story.mdx
+++ b/packages/storybook-html/stories/components/core/colour-apply.story.mdx
@@ -283,15 +283,13 @@ For consistency, we use the below defined colour palette throughout our interfac
   </tbody>
 </table>
 
-# Applying colour
+## Full spectrum of colours
 
 Our colours are created based off these scales below. If darker or lighter shaded are required they must be selected from this palette. Any introduction of colour outside those use cases above must be reviewed by the Design System team.
 
-### Primary
+### Brand
 
 #### Purple
-
-UQ purple should be the only accent colour on a screen. It is already incorporated via the header and footer, typography, icons and other components. Additional use of UQ purple should be thoughtful and sparing.
 
 <div class="uqds-colour__swatches">
   <div className="uqds-colour__palette uqds-colour--purple-50">purple-50</div>
@@ -301,24 +299,10 @@ UQ purple should be the only accent colour on a screen. It is already incorporat
   <div className="uqds-colour__palette uqds-colour--purple-400">purple-400</div>
   <div className="uqds-colour__palette uqds-colour--purple-500">purple-500</div>
   <div className="uqds-colour__palette uqds-colour--purple-600">purple-600</div>
-  <div className="uqds-colour__palette uqds-colour--purple-600">purple-650</div>
+  <div className="uqds-colour__palette uqds-colour--purple-650">purple-650</div>
   <div className="uqds-colour__palette uqds-colour--purple-700">purple-700</div>
   <div className="uqds-colour__palette uqds-colour--purple-800">purple-800</div>
   <div className="uqds-colour__palette uqds-colour--purple-900">purple-900</div>
-</div>
-
-#### Purple gradient
-
-The purple gradient is already incorporated in the header, footer and other components. It should not be used elsewhere in user interfaces without consultation. Note the centre point at 87%.
-<div class="uqds-colour__swatches">
-  <div className="uqds-colour__palette uqds-colour__palette--large uqds-purple-gradient">uq-purple-gradient</div>
-</div>
-
-#### White and black
-
-<div class="uqds-colour__swatches">
-  <div className="uqds-colour__palette uqds-colour--white">white</div>
-  <div className="uqds-colour__palette uqds-colour--black">black</div>
 </div>
 
 #### Grey
@@ -331,12 +315,35 @@ The purple gradient is already incorporated in the header, footer and other comp
   <div className="uqds-colour__palette uqds-colour--grey-400">grey-400</div>
   <div className="uqds-colour__palette uqds-colour--grey-500">grey-500</div>
   <div className="uqds-colour__palette uqds-colour--grey-600">grey-600</div>
+  <div className="uqds-colour__palette uqds-colour--grey-600">grey-650</div>
   <div className="uqds-colour__palette uqds-colour--grey-700">grey-700</div>
   <div className="uqds-colour__palette uqds-colour--grey-800">grey-800</div>
   <div className="uqds-colour__palette uqds-colour--grey-900">grey-900</div>
 </div>
 
+#### Black and white
+
+<div class="uqds-colour__swatches">
+  <div className="uqds-colour__palette uqds-colour--black">black</div>
+  <div className="uqds-colour__palette uqds-colour--white">white</div>
+</div>
+
 ### System
+
+#### Utility
+
+<div class="uqds-colour__swatches">
+  <div className="uqds-colour__palette uqds-colour--utility-50">utility-50</div>
+  <div className="uqds-colour__palette uqds-colour--utility-100">utility-100</div>
+  <div className="uqds-colour__palette uqds-colour--utility-200">utility-200</div>
+  <div className="uqds-colour__palette uqds-colour--utility-300">utility-300</div>
+  <div className="uqds-colour__palette uqds-colour--utility-400">utility-400</div>
+  <div className="uqds-colour__palette uqds-colour--utility-500">utility-500</div>
+  <div className="uqds-colour__palette uqds-colour--utility-600">utility-600</div>
+  <div className="uqds-colour__palette uqds-colour--utility-700">utility-700</div>
+  <div className="uqds-colour__palette uqds-colour--utility-800">utility-800</div>
+  <div className="uqds-colour__palette uqds-colour--utility-900">utility-900</div>
+</div>
 
 #### Error
 
@@ -351,21 +358,6 @@ The purple gradient is already incorporated in the header, footer and other comp
   <div className="uqds-colour__palette uqds-colour--error-700">error-700</div>
   <div className="uqds-colour__palette uqds-colour--error-800">error-800</div>
   <div className="uqds-colour__palette uqds-colour--error-900">error-900</div>
-</div>
-
-#### Success
-
-<div class="uqds-colour__swatches">
-  <div className="uqds-colour__palette uqds-colour--success-50">success-50</div>
-  <div className="uqds-colour__palette uqds-colour--success-100">success-100</div>
-  <div className="uqds-colour__palette uqds-colour--success-200">success-200</div>
-  <div className="uqds-colour__palette uqds-colour--success-300">success-300</div>
-  <div className="uqds-colour__palette uqds-colour--success-400">success-400</div>
-  <div className="uqds-colour__palette uqds-colour--success-500">success-500</div>
-  <div className="uqds-colour__palette uqds-colour--success-600">success-600</div>
-  <div className="uqds-colour__palette uqds-colour--success-700">success-700</div>
-  <div className="uqds-colour__palette uqds-colour--success-800">success-800</div>
-  <div className="uqds-colour__palette uqds-colour--success-900">success-900</div>
 </div>
 
 #### Warning
@@ -383,497 +375,17 @@ The purple gradient is already incorporated in the header, footer and other comp
   <div className="uqds-colour__palette uqds-colour--warning-900">warning-900</div>
 </div>
 
-#### Utility
+#### Success
 
 <div class="uqds-colour__swatches">
-  <div className="uqds-colour__palette uqds-colour--utility-50">utility-50</div>
-  <div className="uqds-colour__palette uqds-colour--utility-100">utility-100</div>
-  <div className="uqds-colour__palette uqds-colour--utility-200">utility-200</div>
-  <div className="uqds-colour__palette uqds-colour--utility-300">utility-300</div>
-  <div className="uqds-colour__palette uqds-colour--utility-400">utility-400</div>
-  <div className="uqds-colour__palette uqds-colour--utility-500">utility-500</div>
-  <div className="uqds-colour__palette uqds-colour--utility-600">utility-600</div>
-  <div className="uqds-colour__palette uqds-colour--utility-700">utility-700</div>
-  <div className="uqds-colour__palette uqds-colour--utility-800">utility-800</div>
-  <div className="uqds-colour__palette uqds-colour--utility-900">utility-900</div>
+  <div className="uqds-colour__palette uqds-colour--success-50">success-50</div>
+  <div className="uqds-colour__palette uqds-colour--success-100">success-100</div>
+  <div className="uqds-colour__palette uqds-colour--success-200">success-200</div>
+  <div className="uqds-colour__palette uqds-colour--success-300">success-300</div>
+  <div className="uqds-colour__palette uqds-colour--success-400">success-400</div>
+  <div className="uqds-colour__palette uqds-colour--success-500">success-500</div>
+  <div className="uqds-colour__palette uqds-colour--success-600">success-600</div>
+  <div className="uqds-colour__palette uqds-colour--success-700">success-700</div>
+  <div className="uqds-colour__palette uqds-colour--success-800">success-800</div>
+  <div className="uqds-colour__palette uqds-colour--success-900">success-900</div>
 </div>
-
-<p>&nbsp;</p>
-
-# Applying colour
-
-## Principles
-
-The Design System specifies colour based on the [UQ Brand Guidelines](https://marketing-communication.uq.edu.au/one-brand) in combination with accessibility standards and user interface standards.
-
-Colour should be applied to user interfaces in only two ways:
-
-- to apply the UQ brand to the user interface
-- in functional and semantic ways such as containers for related content or red for errors.
-
-Colour should not be added to an interface for the sole purpose of creating visual interest. Standard styles and components will incorporate appropriate colour. When a user interface needs to be more visually engaging to achieve its goals, incorporate photography aligned with the brand guidelines.
-
-## Usage examples
-
-### Typography
-
-<table className="uqds-table uqds-table--card uqds-table--colour">
-  <tbody className="uqds-table__body">
-    <tr className="uqds-table__mobile-heading">
-      <th className="uqds-table__heading">Example</th>
-      <th className="uqds-table__heading">Name</th>
-      <th className="uqds-table__heading">Variable</th>
-      <th className="uqds-table__heading">HEX</th>
-      <th className="uqds-table__heading">Usage</th>
-    </tr>
-    <tr className="uqds-table__row">
-      <td className="uqds-table__item">
-        <div className="uqds-colour__palette uqds-text-bgcolor"></div>
-      </td>
-      <td className="uqds-table__item" data-title="Name:">
-        Body text
-      </td>
-      <td className="uqds-table__item" data-title="Variable:">
-        <code>$text</code> alias of <code>$grey-900</code> 
-      </td>
-      <td className="uqds-table__item" data-title="HEX:">
-        #3b383e
-      </td>
-      <td className="uqds-table__item" data-title="Usage:">
-        <ul>
-          <li>
-            We avoid solid black for text, it is too harsh on screens for
-            reading
-          </li>
-          <li>
-            References <code>$grey-900</code>
-          </li>
-        </ul>
-      </td>
-    </tr>
-    <tr className="uqds-table__row">
-      <td className="uqds-table__item">
-        <div className="uqds-colour__palette uqds-colour--grey-700"></div>
-      </td>
-      <td className="uqds-table__item" data-title="Name:">
-        Supertext
-      </td>
-      <td className="uqds-table__item" data-title="Variable:">
-        <code>$grey-700</code>
-      </td>
-      <td className="uqds-table__item" data-title="HEX:">
-        #757377
-      </td>
-      <td className="uqds-table__item" data-title="Usage:">
-        <ul>
-          <li>Used to reduce the emphasis of text</li>
-          <li>
-            Should not be used in isolation but in a supporting role to default
-            text
-          </li>
-          <li>
-            Used where emphasis and contrast is needed, e.g. breadcrumbs, supertext
-          </li>
-        </ul>
-      </td>
-    </tr>
-    <tr className="uqds-table__row">
-      <td className="uqds-table__item">
-        <strong className="uqds-text-color--white">White text</strong>{" "}
-        <div className="uqds-colour__palette uqds-colour--white"></div>
-      </td>
-      <td className="uqds-table__item" data-title="Name:">
-        White text
-      </td>
-      <td className="uqds-table__item" data-title="Variable:">
-        <code>$uq-white</code>
-      </td>
-      <td className="uqds-table__item" data-title="HEX:">
-        #ffffff
-      </td>
-      <td className="uqds-table__item" data-title="Usage:">
-        <ul>
-          <li>Default text colour on dark backgrounds and imagery</li>
-          <li>Use with shadow to ensure readability when used on images</li>
-        </ul>
-      </td>
-    </tr>
-    <tr className="uqds-table__row">
-      <td className="uqds-table__item">
-        <div className="uqds-colour__palette uqds-colour--purple-50"></div>
-      </td>
-      <td className="uqds-table__item" data-title="Name:">
-        Text on purple bg
-      </td>
-      <td className="uqds-table__item" data-title="Variable:">
-        <code>$purple-50</code>
-      </td>
-      <td className="uqds-table__item" data-title="HEX:">
-        #eee9f2
-      </td>
-      <td className="uqds-table__item" data-title="Usage:">
-        <ul>
-          <li>Used for text on purple-500 background (eg header and footer)</li>
-        </ul>
-      </td>
-    </tr>
-     <tr className="uqds-table__row">
-      <td className="uqds-table__item">
-        <div className="uqds-colour__palette uqds-link-color"></div>
-      </td>
-      <td className="uqds-table__item" data-title="Name:">
-        Link color
-      </td>
-      <td className="uqds-table__item" data-title="Variable:">
-        <code>$link</code> alias of <code>$utility-500</code> 
-      </td>
-      <td className="uqds-table__item" data-title="HEX:">
-        #0d6dcd
-      </td>
-      <td className="uqds-table__item" data-title="Usage:">
-        <ul>
-          <li>Default link and button colour</li>
-        </ul>
-      </td>
-    </tr>
-    <tr className="uqds-table__row">
-      <td className="uqds-table__item">
-        <div className="uqds-colour__palette uqds-link-active-color"></div>
-      </td>
-      <td className="uqds-table__item" data-title="Name:">
-        Link active/hover color
-      </td>
-      <td className="uqds-table__item" data-title="Variable:">
-        <code>$link-active</code> alias of <code>$utility-600</code> 
-      </td>
-      <td className="uqds-table__item" data-title="HEX:">
-        #005ea5
-      </td>
-      <td className="uqds-table__item" data-title="Usage:">
-       <ul>
-          <li>Link and button colour hover or active colour</li>
-        </ul>
-      </td>
-    </tr>
-  </tbody>
-</table>
-
-
-### Backgrounds and borders
-
-Backgrounds are used to differentiate parts of an interface, and to create containers for related content.
-
-See for example: Sections, Cards, Table -- _add links eventually_
-
-These can be used with dark and purple text.
-
-<table className="uqds-table uqds-table--card  uqds-table--colour">
-  <tbody className="uqds-table__body">
-    <tr className="uqds-table__mobile-heading">
-      <th className="uqds-table__heading">Example</th>
-      <th className="uqds-table__heading">Name</th>
-      <th className="uqds-table__heading">Variable</th>
-      <th className="uqds-table__heading">HEX</th>
-      <th className="uqds-table__heading">Usage</th>
-    </tr>
-    <tr className="uqds-table__row">
-      <td className="uqds-table__item">
-        <div className="uqds-colour__palette uqds-colour--white"></div>
-      </td>
-      <td className="uqds-table__item" data-title="Name:">
-        White
-      </td>
-      <td className="uqds-table__item" data-title="Variable:">
-        <code>$uq-white</code>
-      </td>
-      <td className="uqds-table__item" data-title="HEX:">
-        #ffffff
-      </td>
-      <td className="uqds-table__item" data-title="Usage:">
-        <ul>
-          <li>Default background for all usage</li>
-        </ul>
-      </td>
-    </tr>
-    <tr className="uqds-table__row">
-      <td className="uqds-table__item">
-        <div className="uqds-colour__palette uqds-colour--grey-50"></div>
-      </td>
-      <td className="uqds-table__item" data-title="Name:">
-        Shaded bg colour
-      </td>
-      <td className="uqds-table__item" data-title="Variable:">
-        <code>$grey-50</code>
-      </td>
-      <td className="uqds-table__item" data-title="HEX:">
-        #fbeaea
-      </td>
-      <td className="uqds-table__item" data-title="Usage:">
-        <ul>
-          <li>Used for shaded variant background eg sections, panes, tables</li>
-        </ul>
-      </td>
-    </tr>
-    <tr className="uqds-table__row">
-      <td className="uqds-table__item">
-        <div className="uqds-colour__palette uqds-colour--purple-600"></div>
-      </td>
-      <td className="uqds-table__item" data-title="Name:">
-        Dark purple
-      </td>
-      <td className="uqds-table__item" data-title="Variable:">
-        <code>$purple-600</code>
-      </td>
-      <td className="uqds-table__item" data-title="HEX:">
-        #4B2271
-      </td>
-      <td className="uqds-table__item" data-title="Usage:">
-        <ul>
-          <li>Header secondary background</li>
-          <li>Hero banner background</li>
-        </ul>
-      </td>
-    </tr>
-    <tr className="uqds-table__row">
-      <td className="uqds-table__item">
-        <div className="uqds-colour__palette uqds-colour--grey-300"></div>
-      </td>
-      <td className="uqds-table__item" data-title="Name:">
-        Grey border
-      </td>
-      <td className="uqds-table__item" data-title="Variable:">
-        <code>$grey-300</code>
-      </td>
-      <td className="uqds-table__item" data-title="HEX:">
-        #d1d0d2
-      </td>
-      <td className="uqds-table__item" data-title="Usage:">
-        <ul>
-          <li>Form field border</li>
-          <li>Controls border</li>
-        </ul>
-      </td>
-    </tr>
-  </tbody>
-</table>
-
-# BELOW NOT YET UPDATED #
-
-## Alert and status colours
-
-These colours can only be used for components which alert a user or display a status. They should only be used with default and white text.
-
-### Light colours
-
-These can be used as background colours to default text, e.g. alerts.
-
-<table className="uqds-table uqds-table--card uqds-table--colour">
-  <tbody className="uqds-table__body">
-    <tr className="uqds-table__mobile-heading">
-      <th className="uqds-table__heading">Example</th>
-      <th className="uqds-table__heading">Name</th>
-      <th className="uqds-table__heading">Variable</th>
-      <th className="uqds-table__heading">HEX</th>
-      <th className="uqds-table__heading">Usage</th>
-    </tr>
-    <tr className="uqds-table__row">
-      <td className="uqds-table__item">
-        <div className="uqds-colour__palette uqds-colour--info"></div>
-      </td>
-      <td className="uqds-table__item" data-title="Name:">
-        Information light
-      </td>
-      <td className="uqds-table__item" data-title="Variable:">
-        <code>$info-light</code>
-      </td>
-      <td className="uqds-table__item" data-title="HEX:">
-        #bbd8f5
-      </td>
-      <td className="uqds-table__item" data-title="Usage:">
-        Information that is neither positive or negative but important to know
-      </td>
-    </tr>
-    <tr className="uqds-table__row">
-      <td className="uqds-table__item">
-        <div className="uqds-colour__palette uqds-colour--success"></div>
-      </td>
-      <td className="uqds-table__item" data-title="Name:">
-        Success light
-      </td>
-      <td className="uqds-table__item" data-title="Variable:">
-        <code>$success-light</code>
-      </td>
-      <td className="uqds-table__item" data-title="HEX:">
-        #dff6e0
-      </td>
-      <td className="uqds-table__item" data-title="Usage:">
-        Success, available
-      </td>
-    </tr>
-    <tr className="uqds-table__row">
-      <td className="uqds-table__item">
-        <div className="uqds-colour__palette uqds-colour--warning"></div>
-      </td>
-      <td className="uqds-table__item" data-title="Name:">
-        Warning light
-      </td>
-      <td className="uqds-table__item" data-title="Variable:">
-        <code>$warning-light</code>
-      </td>
-      <td className="uqds-table__item" data-title="HEX:">
-        #fff0c8
-      </td>
-      <td className="uqds-table__item" data-title="Usage:">
-        Warning; there <em>may</em> be a problem
-      </td>
-    </tr>
-    <tr className="uqds-table__row">
-      <td className="uqds-table__item">
-        <div className="uqds-colour__palette uqds-colour--alert"></div>
-      </td>
-      <td className="uqds-table__item" data-title="Name:">
-        Alert light
-      </td>
-      <td className="uqds-table__item" data-title="Variable:">
-        <code>$alert-light</code>
-      </td>
-      <td className="uqds-table__item" data-title="HEX:">
-        #f6afbb
-      </td>
-      <td className="uqds-table__item" data-title="Usage:">
-        Error, unavailable; there <em>is</em> a problem
-      </td>
-    </tr>
-  </tbody>
-</table>
-
-### Dark colours
-
-These can be used on a white background or as background colours to white text, e.g. form validation errors.
-
-<table className="uqds-table uqds-table--card uqds-table--colour">
-  <tbody className="uqds-table__body">
-    <tr className="uqds-table__mobile-heading">
-      <th className="uqds-table__heading">Example</th>
-      <th className="uqds-table__heading">Name</th>
-      <th className="uqds-table__heading">Variable</th>
-      <th className="uqds-table__heading">HEX</th>
-      <th className="uqds-table__heading">Usage</th>
-    </tr>
-    <tr className="uqds-table__row">
-      <td className="uqds-table__item">
-        <div className="uqds-colour__palette uqds-colour--blue"></div>
-      </td>
-      <td className="uqds-table__item" data-title="Name:">
-        Information
-      </td>
-      <td className="uqds-table__item" data-title="Variable:">
-        <code>$info</code>
-      </td>
-      <td className="uqds-table__item" data-title="HEX:">
-        #1e72c6
-      </td>
-      <td className="uqds-table__item" data-title="Usage:">
-        Information that is neither positive or negative but important to know
-      </td>
-    </tr>
-    <tr className="uqds-table__row">
-      <td className="uqds-table__item">
-        <div className="uqds-colour__palette uqds-green-dark10"></div>
-      </td>
-      <td className="uqds-table__item" data-title="Name:">
-        Success
-      </td>
-      <td className="uqds-table__item" data-title="Variable:">
-        <code>$success</code>
-      </td>
-      <td className="uqds-table__item" data-title="HEX:">
-        #238029
-      </td>
-      <td className="uqds-table__item" data-title="Usage:">
-        Success, available
-      </td>
-    </tr>
-    <tr className="uqds-table__row">
-      <td className="uqds-table__item">
-        <div className="uqds-colour__palette uqds-colour--yellow"></div>
-      </td>
-      <td className="uqds-table__item" data-title="Name:">
-        Warning
-      </td>
-      <td className="uqds-table__item" data-title="Variable:">
-        <code>$warning</code>
-      </td>
-      <td className="uqds-table__item" data-title="HEX:">
-        #fbb800
-      </td>
-      <td className="uqds-table__item" data-title="Usage:">
-        Warning; there <em>may</em> be a problem. Should be used with the
-        default text colour to avoid contrast issues.
-      </td>
-    </tr>
-    <tr className="uqds-table__row">
-      <td className="uqds-table__item">
-        <div className="uqds-colour__palette uqds-red-dark20"></div>
-      </td>
-      <td className="uqds-table__item" data-title="Name:">
-        Alert
-      </td>
-      <td className="uqds-table__item" data-title="Variable:">
-        <code>$alert</code>
-      </td>
-      <td className="uqds-table__item" data-title="HEX:">
-        #951126
-      </td>
-      <td className="uqds-table__item" data-title="Usage:">
-        Error, unavailable; there <em>is</em> a problem
-      </td>
-    </tr>
-  </tbody>
-</table>
-
-## Borders
-
-<table className="uqds-table uqds-table--card uqds-table--colour">
-  <tbody className="uqds-table__body">
-    <tr className="uqds-table__mobile-heading">
-      <th className="uqds-table__heading">Example</th>
-      <th className="uqds-table__heading">Name</th>
-      <th className="uqds-table__heading">Variable</th>
-      <th className="uqds-table__heading">HEX</th>
-      <th className="uqds-table__heading">Usage</th>
-    </tr>
-    <tr className="uqds-table__row">
-      <td className="uqds-table__item">
-        <div className="uqds-colour__palette uqds-neutral-light80"></div>
-      </td>
-      <td className="uqds-table__item" data-title="Name:">
-        Light grey
-      </td>
-      <td className="uqds-table__item" data-title="Variable:">
-        <code>$uq-neutral-light80</code>
-      </td>
-      <td className="uqds-table__item" data-title="HEX:">
-        #f7f6f5
-      </td>
-      <td className="uqds-table__item" data-title="Usage:">
-        <ul>
-          <li>Component borders</li>
-          <li>dividing lines and horizontal rules</li>
-        </ul>
-      </td>
-    </tr>
-  </tbody>
-</table>
-
-
-
-
-
-## Accessibility
-
-Use of colour must meet the following requirements:
-
-- [sufficient colour contrast](https://www.w3.org/WAI/WCAG21/Understanding/contrast-minimum) between text and background colours
-- [colour is not used as the only visual means of conveying information](https://www.w3.org/WAI/WCAG21/Understanding/use-of-color).
-
