more doco updates

--- a/packages/storybook-html/stories/components/core/colour-apply.story.mdx
+++ b/packages/storybook-html/stories/components/core/colour-apply.story.mdx
@@ -22,7 +22,7 @@ For consistency, we use the below defined colour palette throughout our interfac
         <code>$purple-500</code> 
       </td>
       <td className="uqds-table__item" data-title="HEX:">
-        #3b383e
+        <code>#51247a</code>
       </td>
       <td className="uqds-table__item" data-title="Usage:">
         Primary colour. Used for primary button and link text
@@ -36,7 +36,7 @@ For consistency, we use the below defined colour palette throughout our interfac
         <code>$purple-600</code> 
       </td>
       <td className="uqds-table__item" data-title="HEX:">
-        #3b383e
+        <code>#4B2271</code>
       </td>
       <td className="uqds-table__item" data-title="Usage:">
         Primary colour. Used for primary button and link text
@@ -50,7 +50,7 @@ For consistency, we use the below defined colour palette throughout our interfac
         <code>$purple-650</code> 
       </td>
       <td className="uqds-table__item" data-title="HEX:">
-        #3b383e
+        <code>#40205d</code>
       </td>
       <td className="uqds-table__item" data-title="Usage:">
         Primary colour. Used for primary button and link text
@@ -64,7 +64,7 @@ For consistency, we use the below defined colour palette throughout our interfac
         <code>$purple-gradient</code> 
       </td>
       <td className="uqds-table__item" data-title="HEX:">
-        #3b383e
+        -
       </td>
       <td className="uqds-table__item" data-title="Usage:">
         Primary colour. Used for primary button and link text
@@ -78,7 +78,7 @@ For consistency, we use the below defined colour palette throughout our interfac
         <code>$black</code> 
       </td>
       <td className="uqds-table__item" data-title="HEX:">
-        #3b383e
+        <code>#19151c</code>
       </td>
       <td className="uqds-table__item" data-title="Usage:">
         Primary colour. Used for primary button and link text
@@ -92,7 +92,7 @@ For consistency, we use the below defined colour palette throughout our interfac
         <code>$grey-900</code> 
       </td>
       <td className="uqds-table__item" data-title="HEX:">
-        #3b383e
+        <code>#3b383e</code>
       </td>
       <td className="uqds-table__item" data-title="Usage:">
         Primary colour. Used for primary button and link text
@@ -106,7 +106,7 @@ For consistency, we use the below defined colour palette throughout our interfac
         <code>$grey-700</code> 
       </td>
       <td className="uqds-table__item" data-title="HEX:">
-        #3b383e
+        <code>#757377</code>
       </td>
       <td className="uqds-table__item" data-title="Usage:">
         Primary colour. Used for primary button and link text
@@ -120,7 +120,7 @@ For consistency, we use the below defined colour palette throughout our interfac
         <code>$grey-300</code> 
       </td>
       <td className="uqds-table__item" data-title="HEX:">
-        #3b383e
+        <code>#d1d0d2</code>
       </td>
       <td className="uqds-table__item" data-title="Usage:">
         Primary colour. Used for primary button and link text
@@ -134,7 +134,7 @@ For consistency, we use the below defined colour palette throughout our interfac
         <code>$grey-200</code> 
       </td>
       <td className="uqds-table__item" data-title="HEX:">
-        #3b383e
+        <code>#dcdcdd</code>
       </td>
       <td className="uqds-table__item" data-title="Usage:">
         Primary colour. Used for primary button and link text
@@ -148,7 +148,7 @@ For consistency, we use the below defined colour palette throughout our interfac
         <code>$grey-50</code> 
       </td>
       <td className="uqds-table__item" data-title="HEX:">
-        #3b383e
+        <code>#f3f3f4</code>
       </td>
       <td className="uqds-table__item" data-title="Usage:">
         Primary colour. Used for primary button and link text
@@ -162,7 +162,7 @@ For consistency, we use the below defined colour palette throughout our interfac
         <code>$white</code> 
       </td>
       <td className="uqds-table__item" data-title="HEX:">
-        #3b383e
+        <code>#ffffff</code>
       </td>
       <td className="uqds-table__item" data-title="Usage:">
         Primary colour. Used for primary button and link text
@@ -176,7 +176,7 @@ For consistency, we use the below defined colour palette throughout our interfac
         <code>$utility-500</code> 
       </td>
       <td className="uqds-table__item" data-title="HEX:">
-        #3b383e
+        <code>#0d6dcd</code>
       </td>
       <td className="uqds-table__item" data-title="Usage:">
         Primary colour. Used for primary button and link text
@@ -190,7 +190,7 @@ For consistency, we use the below defined colour palette throughout our interfac
         <code>$utility-50</code> 
       </td>
       <td className="uqds-table__item" data-title="HEX:">
-        #3b383e
+        <code>#e7f0fa</code>
       </td>
       <td className="uqds-table__item" data-title="Usage:">
         Primary colour. Used for primary button and link text
@@ -204,7 +204,7 @@ For consistency, we use the below defined colour palette throughout our interfac
         <code>$error-500</code> 
       </td>
       <td className="uqds-table__item" data-title="HEX:">
-        #3b383e
+        <code>#d62929</code>
       </td>
       <td className="uqds-table__item" data-title="Usage:">
         Primary colour. Used for primary button and link text
@@ -218,7 +218,7 @@ For consistency, we use the below defined colour palette throughout our interfac
         <code>$error-50</code> 
       </td>
       <td className="uqds-table__item" data-title="HEX:">
-        #3b383e
+        <code>#fbeaea</code>
       </td>
       <td className="uqds-table__item" data-title="Usage:">
         Primary colour. Used for primary button and link text
@@ -232,7 +232,7 @@ For consistency, we use the below defined colour palette throughout our interfac
         <code>$warning-500</code> 
       </td>
       <td className="uqds-table__item" data-title="HEX:">
-        #3b383e
+        <code>#f7ba1e</code>
       </td>
       <td className="uqds-table__item" data-title="Usage:">
         Primary colour. Used for primary button and link text
@@ -246,7 +246,7 @@ For consistency, we use the below defined colour palette throughout our interfac
         <code>$warning-50</code> 
       </td>
       <td className="uqds-table__item" data-title="HEX:">
-        #3b383e
+        <code>#fef8e8</code>
       </td>
       <td className="uqds-table__item" data-title="Usage:">
         Primary colour. Used for primary button and link text
@@ -260,7 +260,7 @@ For consistency, we use the below defined colour palette throughout our interfac
         <code>$success-500</code> 
       </td>
       <td className="uqds-table__item" data-title="HEX:">
-        #3b383e
+        <code>#4aa74e</code>
       </td>
       <td className="uqds-table__item" data-title="Usage:">
         Primary colour. Used for primary button and link text
@@ -274,7 +274,7 @@ For consistency, we use the below defined colour palette throughout our interfac
         <code>$success-50</code> 
       </td>
       <td className="uqds-table__item" data-title="HEX:">
-        #3b383e
+        <code>#edf6ed</code>
       </td>
       <td className="uqds-table__item" data-title="Usage:">
         Primary colour. Used for primary button and link text
