overhaul of colour variable names to remove uq- prefix. added shorthand colour variables. iterated through components and doco to update references and replace where neccessary

--- a/packages/storybook-html/stories/components/core/colour-base.story.mdx
+++ b/packages/storybook-html/stories/components/core/colour-base.story.mdx
@@ -26,7 +26,7 @@ These are the core brand colours for the University of Queensland. Refer to the 
         UQ purple
       </td>
       <td className="uqds-table__item" data-title="Variable:">
-        <code>$uq-purple</code>
+        <code>$purple</code>
       </td>
       <td className="uqds-table__item" data-title="HEX:">
         #51247a
@@ -43,7 +43,7 @@ These are the core brand colours for the University of Queensland. Refer to the 
         UQ white
       </td>
       <td className="uqds-table__item" data-title="Variable:">
-        <code>$uq-white</code>
+        <code>$white</code>
       </td>
       <td className="uqds-table__item" data-title="HEX:">
         #ffffff
@@ -60,7 +60,7 @@ These are the core brand colours for the University of Queensland. Refer to the 
         UQ black
       </td>
       <td className="uqds-table__item" data-title="Variable:">
-        <code>$uq-black</code>
+        <code>$black</code>
       </td>
       <td className="uqds-table__item" data-title="HEX:">
         #000000
@@ -95,7 +95,7 @@ These secondary colours should always play a supporting role to our primary colo
         UQ purple light
       </td>
       <td className="uqds-table__item" data-title="Variable:">
-        <code>$uq-purple-light</code>
+        <code>$purple-light</code>
       </td>
       <td className="uqds-table__item" data-title="HEX:">
         #962a8b
@@ -163,7 +163,7 @@ These secondary colours should always play a supporting role to our primary colo
         UQ yellow
       </td>
       <td className="uqds-table__item" data-title="Variable:">
-        <code>$uq-yellow</code>
+        <code>$yellow</code>
       </td>
       <td className="uqds-table__item" data-title="HEX:">
         #fbb800
@@ -180,7 +180,7 @@ These secondary colours should always play a supporting role to our primary colo
         UQ blue
       </td>
       <td className="uqds-table__item" data-title="Variable:">
-        <code>$uq-blue</code>
+        <code>$blue</code>
       </td>
       <td className="uqds-table__item" data-title="HEX:">
         #4085c6
@@ -189,23 +189,7 @@ These secondary colours should always play a supporting role to our primary colo
         Secondary UQ Colour
       </td>
     </tr>
-    <tr className="uqds-table__row">
-      <td className="uqds-table__item">
-        <div className="uqds-colour__palette uqds-colour--aqua"></div>
-      </td>
-      <td className="uqds-table__item" data-title="Name:">
-        UQ aqua
-      </td>
-      <td className="uqds-table__item" data-title="Variable:">
-        <code>$uq-aqua</code>
-      </td>
-      <td className="uqds-table__item" data-title="HEX:">
-        #00a2c7
-      </td>
-      <td className="uqds-table__item" data-title="Usage:">
-        Secondary UQ Colour
-      </td>
-    </tr>
+
     <tr className="uqds-table__row">
       <td className="uqds-table__item">
         <div className="uqds-colour__palette uqds-colour--green"></div>
